--- a/src/components/VFZip.component
+++ b/src/components/VFZip.component
@@ -35,6 +35,7 @@
        
         
         function zipAttachments{!randomInt}(attachments){
+
               $bf9Status{!randomInt} = $("#bf9Status{!randomInt}Message");
               $bf9Status{!randomInt}.html('Creating Zip..');
               var zip = new JSZip();
@@ -43,12 +44,32 @@
               });
               var blobLink = document.getElementById('bf9FileLink{!randomInt}');
               try {
+ 
+                detect = detectIE();
+ 
                 blobLink.download = "{!generatedFileName}.zip";
-                blobLink.href = window.URL.createObjectURL(zip.generate({type:"blob"}));
-                //widnow.open(blobLink.href);
+            
+                if (typeof(detect) === "boolean"){//other borwser
+
+                    blobLink.href = window.URL.createObjectURL(zip.generate({type:"blob"}));
+
+                }
+                else{
+                    
+                    var x = window.navigator.msSaveBlob(zip.generate({type:"blob"}),blobLink.download);
+                    
+                    if(detect < 10){
+                        blobLink.innerHTML = "";
+                        blobLink.innerHTML = "Component supported only IE 10 and above. But you can do this with any other browser";
+                    }else{
+                        blobLink.innerHTML = "";
+                        blobLink.innerHTML = "Please click the save button";
+                    }
+                    
+                }                 
+               
               } catch(e) {
                 blobLink.innerHTML += " (not supported on this browser)";
-                console.log(e);
               }
               $("#bf9FileLinkDiv{!randomInt}").show();
               $("#bf9Status{!randomInt}").hide();
@@ -66,6 +87,31 @@
                     { buffer: false, escape: true, timeout: 120000 }
             );
        }
+        function detectIE() {
+            var ua = window.navigator.userAgent;
+
+            var msie = ua.indexOf('MSIE ');
+            if (msie > 0) {
+                // IE 10 or older => return version number
+                return parseInt(ua.substring(msie + 5, ua.indexOf('.', msie)), 10);
+            }
+
+            var trident = ua.indexOf('Trident/');
+            if (trident > 0) {
+                // IE 11 => return version number
+                var rv = ua.indexOf('rv:');
+                return parseInt(ua.substring(rv + 3, ua.indexOf('.', rv)), 10);
+            }
+
+            var edge = ua.indexOf('Edge/');
+            if (edge > 0) {
+               // Edge (IE 12+) => return version number
+               return parseInt(ua.substring(edge + 5, ua.indexOf('.', edge)), 10);
+            }
+
+            // other browser
+            return false;
+        }
     </script>
     
     <apex:outputPanel rendered="{!LOWER(mode) == 'button'}">
